# libnss-pgsql

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  nss-pgsql.spec
conf/: dbschema.sql  nss-pgsql-root.conf  nss-pgsql.conf  nsswitch.conf
doc/: Makefile  Makefile.am  Makefile.in  config.xsl  nss-pgsql.xml
src/: Makefile.am  Makefile.in  backend.c  config.c  config.h.in  interface.c  libc-lock.h  nss-pgsql.h  util.c
